[package]
name = "gq"
version = "0.1.0"
authors = ["Alexandre Beaulieu <alex@segfault.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde_json = "1.0.48"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }

[dependencies.reqwest]
version = "0.10.1"
features = ["json"]
